@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.University" type="Library" version="01.01.02">
+		<package name="R7.University" type="Library" version="01.01.03">
 			<friendlyName>R7.University</friendlyName>
 			<description>This is a common library for all R7.University modules. By installing this package, you also install all available R7.University modules, such as Launchpad, Division, Employee, EmployeeList, etc.</description>
 			<owner>
@@ -50,9 +50,13 @@
 							<name>SqlDataProvider\01.01.02.SqlDataProvider</name>
 							<version>01.01.02</version>
 						</script>
+						<script type="Install">
+							<name>SqlDataProvider\01.01.03.SqlDataProvider</name>
+							<version>01.01.03</version>
+						</script>
 						<script type="UnInstall">
 							<name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-							<version>01.01.02</version>
+							<version>01.01.03</version>
 						</script>
 					</scripts>
 				</component>
@@ -75,13 +79,13 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Launchpad" type="Module" version="01.01.02">
+		<package name="R7.University.Launchpad" type="Module" version="01.01.03">
 			<friendlyName>R7.University.Launchpad</friendlyName>
 			<description>This is a simple module to display some records from database table.</description>
 			<owner>
 				<name>Roman M. Yagodin</name>
 				<organization>R7.Solutions</organization>
-				<url>http://www.r7space.ru</url>
+				<url>https://github.com/roman-yagodin/R7.University</url>
 				<email>roman.yagodin@gmail.com</email>
 			</owner>
 			<license src="License.txt" />
@@ -196,13 +200,13 @@
 				</component>
       		</components>
 		</package>
-		<package name="R7.University.Employee" type="Module" version="01.01.02">
+		<package name="R7.University.Employee" type="Module" version="01.01.03">
 			<friendlyName>_Employee</friendlyName>
 			<description>This is a module to display information about single employee.</description>
 			<owner>
 				<name>Roman M. Yagodin</name>
 				<organization>R7.Solutions</organization>
-				<url>http://www.r7space.ru</url>
+				<url>https://github.com/roman-yagodin/R7.University</url>
 				<email>roman.yagodin@gmail.com</email>
 			</owner>
 			<license src="License.txt" />
@@ -300,13 +304,13 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeList" type="Module" version="01.01.02">
+		<package name="R7.University.EmployeeList" type="Module" version="01.01.03">
 			<friendlyName>_EmployeeList</friendlyName>
 			<description>This is a simple module to display a list of employees.</description>
 			<owner>
 				<name>Roman M. Yagodin</name>
 				<organization>R7.Solutions</organization>
-				<url>http://www.r7space.ru</url>
+				<url>https://github.com/roman-yagodin/R7.University</url>
 				<email>roman.yagodin@gmail.com</email>
 			</owner>
 			<license src="License.txt" />
@@ -393,13 +397,13 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Division" type="Module" version="01.01.02">
+		<package name="R7.University.Division" type="Module" version="01.01.03">
 			<friendlyName>_Division</friendlyName>
 			<description>This is a module to display information about single division.</description>
 			<owner>
 				<name>Roman M. Yagodin</name>
 				<organization>R7.Solutions</organization>
-				<url>http://www.r7space.ru</url>
+				<url>https://github.com/roman-yagodin/R7.University</url>
 				<email>roman.yagodin@gmail.com</email>
 			</owner>
 			<license src="License.txt" />
@@ -486,13 +490,13 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDirectory" type="Module" version="01.01.02">
-			<friendlyName>_EmployeeDirectory</friendlyName>
+		<package name="R7.University.EmployeeDirectory" type="Module" version="01.01.03">
+			<friendlyName>R7.University.EmployeeDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
 				<name>Roman M. Yagodin</name>
 				<organization>R7.Solutions</organization>
-				<url>http://www.r7space.ru</url>
+				<url>https://github.com/roman-yagodin/R7.University</url>
 				<email>roman.yagodin@gmail.com</email>
 			</owner>
 			<license src="License.txt" />
