@@ -1,4 +1,12 @@
-﻿<h3>Version 1.1.2</h3>
+﻿<h3>Version 1.1.3</h3>
+<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
+<ul>
+    <li>New EmployeeDirectory module provides search for employees.</li>
+    <li>ViewEmployeeDetails: fixes for non-popup mode.</li>
+    <li>Other small improvements and fixes.</li>
+</ul>
+
+<h3>Version 1.1.2</h3>
 <p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
 <ul>
     <li>Ability to lookup for photo by employee name (also supports transliteration for cyrillic (russian) names).</li>
